--- a/public_html/style.css
+++ b/public_html/style.css
@@ -2,7 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
 
-*{
+*{padding: 0;
+  margin: 0;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -46,6 +47,19 @@ nav ul li a {
 .menu a:hover {
   color: #581200;
 }
+
+main {
+  padding: 10px 30px;
+}
+
+main .img {
+  width: 556px;
+  height: 270px;
+  border-radius: 40px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
 
 
 /* Smartphone Landscape */
