--- a/public_html/style-cadastro.css
+++ b/public_html/style-cadastro.css
@@ -3,51 +3,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  font-family: 'Montserrat', sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
 .logo {
-  display: flex;
-  justify-content: center;
+display: flex;
+justify-content: center;
 }
 
 nav {
-  display: flex;
-  justify-content: center
+    display: flex;
+    justify-content: center
 }
 
 nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 
 }
 
 nav ul li {
-  float: left;
+    float: left;
 }
 
 nav ul li a {
 
-  color: rgb(193, 0, 22);
-  text-align: center;
-  padding: 10px 16px;
-  text-decoration: solid;
+    color: rgb(193, 0, 22);
+    text-align: center;
+    padding: 10px 16px;
+    text-decoration: solid;
 }
 
 .menu a {
-  display: flex;
-  font-family: 'Chewy';
-  font-size: 1.6em;
-  justify-content: center;
+    display: flex;
+    font-family: 'Chewy';
+    font-size: 1.6em;
+    justify-content: center;
 }
 
 .menu a:hover {
-  color: #581200;
+    color: #581200;
 }
 
 main {
@@ -56,18 +56,29 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #4e4e724d;
+    background:rgba(216, 216, 216, 0.212);
 }
 
 .container {
-    width: 80%;
-    height: 80vh;
+    width: 90%;
+    height: 70%;
     display: flex;
-    box-shadow: 5px 5px 10px rgba(3, 3, 3, 0.212);
+    box-shadow: 10px 0px 10px rgba(3, 3, 3, 0.212);
 }
 
 section {
-    background-color: aqua;
+    background-color: rgb(140, 140, 140);
+    width: 100%;
+    display: grid        
 }
 
-section
+.login-header{
+    background-color: rgb(126, 90, 90);
+}
+
+.title {
+    align-items: center;
+    line-height: 2em;
+}
+
+
