--- a/public_html/style-cadastro.css
+++ b/public_html/style-cadastro.css
@@ -103,22 +103,43 @@ form {
     background-color: rgb(160, 160, 160);
     box-shadow: 10px 10px 10px rgba(3, 3, 3, 0.212);
 }
+
 .form-login{
     margin-bottom: ;
     border-radius: 10px;
     background-color: rgb(158, 113, 113);
     box-shadow: 10px 10px 10px rgba(3, 3, 3, 0.212);
-
 }
 
 .form-header {
-padding: 20px;
+    margin-top: 30px;
 }
 
 .title {
     align-content: center;
     line-height: 3em;
 }
+
+.input-group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+.input-box {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-box input {
+    margin: 0rem ;
+    padding: 0.4rem;
+    border: none;
+    border-radius: 20px;
+    font-size: 0.8rem;
+}
+
 
 .entrar-button button {
     width: 100%;
@@ -140,7 +161,6 @@ padding: 20px;
     font-weight: 500;
     color: #fff;
 }
-
 
 .continue-button button {
     width: 100%;
