--- a/public_html/style.css
+++ b/public_html/style.css
@@ -71,8 +71,8 @@ section{
 
 
 .texto-home {
+  box-sizing: border-box;
   padding: 0px 30px;
-  align-items: center;
   margin-top: 30px;
   margin-right: 20px;
   margin-bottom: 10px;
