--- a/public_html/cardapio.css
+++ b/public_html/cardapio.css
@@ -5,6 +5,109 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Chewy', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
+.logo {
+    display: flex;
+    justify-content: center;
+}
+
+nav {
+    display: flex;
+    justify-content: center
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+nav ul li {
+float: left;
+}
+
+nav ul li a {
+    color: rgb(193, 0, 22);
+    text-align: center;
+    padding: 10px 16px;
+    text-decoration: solid;
+}
+
+.menu a {
+    display: flex;
+    font-family: 'Chewy';
+    font-size: 1.6em;
+    justify-content: center;
+}
+
+.menu a:hover {
+    color: #581200;
+}
+
+body{
+    font-family: 'Montserrat';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.header{
+    height: 10vh;
+    width: 30%;
+    margin: 30px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px;
+}
+
+.container{
+    display: flex;
+    width: 100%;
+    margin: 30px ;
+    justify-content: center;
+}
+
+#root{
+    width: 60%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+}
+
+.box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px;
+}
+
+.img-box{
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;    
+
+}
+
+.images{
+    border-radius: 8px;
+    box-shadow: 3px 3px 8px 3px  #707070;
+}
+
+
+.sidebar{
+    width: 20%;
+    border-radius: 5px;
+    background-color: #eee;
+    margin-left: 20px;
+    padding: 15px;
+    text-align: center;
+}
