--- a/public_html/cadastro.css
+++ b/public_html/cadastro.css
@@ -51,6 +51,30 @@ nav ul li a {
 }
 
 main {
+    padding: 20px 0px;
+    justify-content: center;
+}
+
+body{
+    font-family: 'Montserrat';
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.header{
+    margin:100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px;
+}
+
+
+
+main {
     width: 100%;
     height: 100vh;
     display: flex;
