--- a/public_html/cardapio.css
+++ b/public_html/cardapio.css
@@ -26,7 +26,7 @@ nav ul {
 }
 
 nav ul li {
-float: left;
+    float: left;
 }
 
 nav ul li a {
@@ -47,67 +47,164 @@ nav ul li a {
     color: #581200;
 }
 
+main {
+    display: flex;
+    padding: 20px 0px;
+    justify-content: space-evenly;
+    background: rgba(216, 216, 216, 0.212);
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+}
+
 body{
     font-family: 'Montserrat';
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 
 }
 
-.header{
-    height: 10vh;
-    width: 30%;
-    margin: 30px 0px;
+/* .header{
+    margin:100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 15px;
-}
+} */
 
 .container{
     display: flex;
-    width: 100%;
-    margin: 30px ;
-    justify-content: center;
+    width: 80%;
+    margin: 30px 20px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+    align-items: flex-start;
 }
 
 #root{
     width: 60%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
 }
 
 .box{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 15px;
+    justify-content: flex-start;
+    padding: 10px; 
 }
 
 .img-box{
     width: 90%;
     display: flex;
-    align-items: center;
+    align-content: flex-start;
     justify-content: center;
-    margin-bottom: 10px;    
-
+    height: 180px;
 }
 
 .images{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    object-position: center;
     border-radius: 8px;
     box-shadow: 3px 3px 8px 3px  #707070;
+    }
+
+.bottom {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    width: 100%;
+    height: 210px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-gap: 0.5em; 
+    justify-content: space-between; 
+}
+
+h1{
+    font-size: 16px;
+}
+p {
+    font-size: 13px;
+}
+h2 {
+    font-size: 18px;
 }
 
 
+button{
+    width: 80%;
+    position: relative;
+    border: none;
+    border-radius: 8px;
+    background-color: rgb(193, 0, 22);
+    padding: 7px 25px;
+    cursor: pointer;
+    color: white;
+}
+button:hover{
+    background-color: #581200;;
+}
+
 .sidebar{
-    width: 20%;
-    border-radius: 5px;
-    background-color: #eee;
+    width: 30%;
+    border-radius: 8px;
+    background-color: #d8dad8;
     margin-left: 20px;
     padding: 15px;
     text-align: center;
 }
+.head{
+    background-color: rgb(193, 0, 22);
+    border-radius: 8px;
+    height: 60px;
+    margin-bottom: 20px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.cart{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 7px 10px;
+
+}
+.fa-solid{
+    color: goldenrod;
+}
+
+
+
+
+    /* valores carrinho */
+.foot{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0px;
+    padding: 10px 0px;
+    border-top: 1px solid #333;
+}
+
+/* Smartphone Landscape */
+@media (min-width: 576px) {}
+
+/* Tablet Portrait */
+@media (min-width: 768px) {}
+
+/* Tablet Landscape */
+@media (min-width: 992px) {}
+
+/* PC */
+@media (min-width: 1200px) {}
